--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,5 +9,7 @@
   "2.12": "Adding a connection string ->Startup.cs(2.12.1)",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-35MK3UV;Database=skinet;Trusted_Connection=True;"
-  }
+  },
+  "4.45": "Adding property for ApiUrl for img name ->ProductUrlResolver",
+  "ApiUrl": "https://localhost:5001/"
 }
