Added Basket component and module

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,7 +9,7 @@
   "2.12": "Adding a connection string ->Startup.cs(2.12.1)",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-35MK3UV;Database=skinet;Trusted_Connection=True;",
-    "13.135.2": "Add connection string for redis ->",
+    "13.135.2": "Add connection string for redis -> app-routing.module.ts",
     "Redis":  "localhost" 
   },
   "4.45": "Adding property for ApiUrl for img name ->ProductUrlResolver",
