Setting up Identity Context

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,8 +9,10 @@
   "2.12": "Adding a connection string ->Startup.cs(2.12.1)",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-35MK3UV;Database=skinet;Trusted_Connection=True;",
+    "15.163.2": "Add connection string for identity ->",
+    "IdentityConnection": "Server=DESKTOP-35MK3UV;Database=skinetIdentity.db;Trusted_Connection=True;",
     "13.135.2": "Add connection string for redis -> app-routing.module.ts",
-    "Redis":  "localhost" 
+    "Redis": "localhost"
   },
   "4.45": "Adding property for ApiUrl for img name ->ProductUrlResolver",
   "ApiUrl": "https://localhost:5001/"
