--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,10 +9,16 @@
   "2.12": "Adding a connection string ->Startup.cs(2.12.1)",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-35MK3UV;Database=skinet;Trusted_Connection=True;",
-    "15.163.2": "Add connection string for identity ->",
+    "15.163.2": "Add connection string for identity ->AppIdentityDbContextSeed",
     "IdentityConnection": "Server=DESKTOP-35MK3UV;Database=skinetIdentity.db;Trusted_Connection=True;",
     "13.135.2": "Add connection string for redis -> app-routing.module.ts",
     "Redis": "localhost"
+  },
+  "15.171.2": "Add keys and issuer ->Startup.cs",
+  "Token": {
+    "Key": "super secret key",
+    "Issuer": "https://localhost:5001"
+
   },
   "4.45": "Adding property for ApiUrl for img name ->ProductUrlResolver",
   "ApiUrl": "https://localhost:5001/"
