--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "uuid": "^8.3.2",
+    "uuid": "^3.4.0",
     "xng-breadcrumb": "^6.6.1",
     "zone.js": "~0.10.2"
   },
@@ -38,6 +38,7 @@
     "@angular/compiler-cli": "~11.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
